--- a/website.html
+++ b/website.html
@@ -8,6 +8,7 @@
 <body>
 
   <h1>HaneenAmmouri</h1>
+  <h3>Check out my personal page at: </h3> <a href='https://github.com/haneenammouri'>JohnCrane-8D</a>
 
   <img width='300px'src="https://www.newstalk.com/content/000/images/000109/112550_54_news_hub_106147_656x500.jpg" alt="Asif">
 
